src/objects/ISSP_IP_Locator__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End1__c</fullName>
        <label>End1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End2__c</fullName>
        <label>End2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End3__c</fullName>
        <label>End3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Integer__c</fullName>
        <formula>(End1__c * 256 * 256 * 256)
+
(End2__c * 256 * 256)
+
(End3__c * 256)
+
(End4__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start1__c</fullName>
        <label>Start1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start2__c</fullName>
        <label>Start2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start3__c</fullName>
        <label>Start3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Integer__c</fullName>
        <formula>(Start1__c * 256 * 256 * 256)
+
(Start2__c * 256 * 256)
+
(Start3__c * 256)
+
(Start4__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Number__c</fullName>
        <formula>VALUE(LEFT(Start__c,FIND(&quot;.&quot;, Start__c, 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ISSP IP Locator</label>
    <nameField>
        <displayFormat>IP-{00000000}</displayFormat>
        <label>ISSP IP Database Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISSP IP Locator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>